# Convolution_of_4D_tensors

./: CMakeLists.txt  README.md  main.cpp
include/convolution/: convolution.hpp
include/dim/: dim.hpp
include/gemm/: gemm.hpp
include/tensor/: tensor.hpp
lib/: convolution.cpp  dim.cpp  gemm.cpp
tests/: CMakeLists.txt
tests/e2e/io/: 001.ans  002.ans  003.ans
tests/unit/: convolution_test.cpp  dim_test.cpp  gemm_test.cpp  tensor_test.cpp
